feat: add prrogress chapter color to chapter accordion

--- a/src/renderer/src/components/lesson/LessonProgressIcon/LessonProgressIcon.module.scss
+++ b/src/renderer/src/components/lesson/LessonProgressIcon/LessonProgressIcon.module.scss
@@ -5,10 +5,10 @@
 
     &__info {
         transform: rotate(180deg);
-        stroke: #ffca16;
+        @include stroke('warning');
     }
 
     &__check {
-        stroke: #53b365;
+        @include stroke('valid');
     }
 }
